2006-12-12  John (J5) Palmieri  <johnp@redhat.com>

	* Released 1.0.2

2006-12-12  John (J5) Palmieri  <johnp@redhat.com>

	* bus/signal.c: Fix match_rule_equal errata
	(CVE-2006-6107 - Patch from Kimmo Hämäläinen 
	<kimmo.hamalainen@nokia.com>)

2006-11-19  Thiago Macieira  <thiago@kde.org>

	* dbus/dbus-sysdeps-pthread.c (_dbus_pthread_mutex_lock,
        _dbus_pthread_condvar_wait,
        _dbus_pthread_condvar_wait_timeout): set pmutex->holder to
        pthread_self() after coming back from a conditional variable
        wait as well as in one codepath where it was forgotten.
	Approved by: Havoc Pennington.

2006-11-17  Havoc Pennington  <hp@redhat.com>

	* update-dbus-docs.sh: allow setting fd.org username via env
	variable. Make it run autogen with --enable-xml-docs=yes
	--enable-doxygen-docs=yes so configure will fail if the required
	tools are missing.

2006-11-17  Havoc Pennington  <hp@redhat.com>

	* doc/dbus-faq.xml: minor FAQ tweaks

2006-11-17  John (J5) Palmieri  <johnp@redhat.com>

	* Released 1.0.1

2006-11-14  Havoc Pennington  <hp@redhat.com>
	
	* dbus/dbus-misc.c, dbus/dbus-misc.h: Move
	dbus_get_local_machine_id() to its own file, no substantive
	changes. There are a couple other things we might want to add that
	are "misc" so moving out of dbus-connection.[hc] which is big
	enough already.
	
2006-11-14  Havoc Pennington  <hp@redhat.com>

	* dbus/dbus-internals.c (_dbus_generate_uuid): The spec said the
	UUID had the timestamp last, but the implementation had it first;
	move it to last since I think it's a tiny bit nicer (easier to
	compare at a glance, faster to sort, less code), and will not
	cause any practical compatibility problems. Also, always convert
	the timestamp to big endian.

	* doc/dbus-specification.xml: Clean up the docs on the UUID.

	* tools/dbus-uuidgen.1: more prominently say it is not suitable
	as a replacement for regular uuidgen/RFC4122.

2006-11-14  John (J5) Palmieri  <johnp@redhat.com>
